Prevent set grid overflow

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1091,7 +1091,9 @@ main.container {
 
         .product-preview-container {
             @extend .col-12;
-            @extend .col-md-3;
+            @extend .col-md-6;
+            @extend .col-lg-4;
+            @extend .col-xl-3;
 
             margin-bottom: 1px;
 
